feat: refactor home page

--- a/src/pages/colors.astro
+++ b/src/pages/colors.astro
@@ -3,6 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import ColorsForm from "../components/ColorsForm"
 ---
 
-<Layout>
+<Layout title='Colors'>
 <ColorsForm client:load />
 </Layout>
