--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,5 +7,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+  <div class="grid grid-cols-3 gap-4 p-4 mx-auto max-w-3xl">
+<a class="block py-4 text-center bg-background text-foreground border rounded" href="/colors">Colors</a>
+  </div>
 </Layout>
