fix: date update issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { BanglaDate } from '@/components/BanglaDate';
     <div class="max-w-3xl text-center mx-auto p-4">
 
     <a href="https://www.npmjs.com/package/bangla-calendar" target="_blank">
-  <BanglaDate />
+  <BanglaDate client:load />
     </a>
     </div>
   </footer>
