feat: add ebill calculator

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,9 @@ import { BanglaDate } from '@/components/BanglaDate';
     <div>
 <a class="py-4 inline-block w-full text-center bg-background text-foreground border rounded" href="/colors">Colors</a>
     </div>
+    <div>
+<a class="py-4 inline-block w-full text-center bg-background text-foreground border rounded" href="/ebill">Ebill</a>
+    </div>
   </div>
 
   <footer class="border-t mt-4">
